--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,8 +3,9 @@
 
 target 'CWCrashProtect' do
   # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
-
+#  use_frameworks!
+  inhibit_all_warnings!
+  
   pod 'CWCrashProtect', :path => '../'
 
 end
