--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,6 +6,6 @@ target 'CWCrashProtect' do
 #  use_frameworks!
   inhibit_all_warnings!
   
-  pod 'CWCrashProtect', :path => '../'
+  pod 'CWCrashProtect'
 
 end
